# PrithviTechnologies-Website

./: .env.local  .gitignore  .~lock..gitignore#  404.html  404.html.br  CNAME  README.md  astro.config.mjs  index.html  index.html.br  manifest.json  next.config.ts  package-lock.json  package.json  sitemap-0.xml  sitemap-0.xml.br  sitemap-index.xml  sitemap-index.xml.br  tailwind.config.mjs
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.orchids/: orchids.json
_astro/: ClientRouter.astro_astro_type_script_index_0_lang.CEOB5qie.js  ClientRouter.astro_astro_type_script_index_0_lang.CEOB5qie.js.br  Head.astro_astro_type_script_index_0_lang.BLXX3O42.js.br  ec.zlwos.css.br  (+20 more)
data-annotation-tracking-dev/backend/: README.md  main.py  pyproject.toml  requirements.txt
data-annotation-tracking-dev/backend/core/: auth_handler.py  config.py
data-annotation-tracking-dev/backend/db/: database.py
data-annotation-tracking-dev/backend/models/: daily_status.py  problem_list.py  problem_noted.py  project_problem_mapping.py  projects.py  user.py
data-annotation-tracking-dev/backend/routers/: auth.py  daily_status.py  problem_list.py  problem_noted.py  project_problem_mapping.py  projects.py  user.py
data-annotation-tracking-dev/backend/schemas/: daily_status.py  problem_list.py  problem_noted.py  project_problem_mapping.py  projects.py  user.py
(+631 files in other folders)
